[tool.poetry]
name = "deep-rl-nanodegree"
version = "0.1.0"
description = "Repository with the RL nanodegree projects"
authors = ["Ennio <nascaennio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
gym = "^0.17.2"
notebook = "^6.0.3"
matplotlib = "^3.2.1"
seaborn = "^0.10.1"
tqdm = "^4.46.1"
ipywidgets = "^7.5.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.780"
flake8 = "^3.8.2"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
