[tool.poetry]
name = "navigation"
version = "0.1.0"
description = ""
authors = ["Ennio <nascaennio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.8"
numpy = "^1.18.5"
unityagents = "^0.4.0"
notebook = "^6.0.3"
torch = "^1.5.0"
torchvision = "^0.6.0"
pandas = "^1.0.4"
torchviz = "^0.0.1"
version_information = "^1.0.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[tool.black]
line-length = 100
exclude = '''
(
    \.DS_Store |
    \.githooks |
    \.html$ |
    \.idea |
    \.json$ |
    \.pyc$ |
    \.sql$ |
    \.vscode |
    \.venv |
    node_modules
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
